--- a/uniapp/指南.md
+++ b/uniapp/指南.md
@@ -1,8 +1,8 @@
 ## [uni-app](https://uniapp.dcloud.net.cn/) 
 
 ### 一、开发工具
-1. 下载[HBuilderX](https://www.dcloud.io/hbuilderx.html)
-2. 下载[微信开发者工具](https://developers.weixin.qq.com/miniprogram/dev/devtools/stable.html)
+1. 下载[HBuilderX](https://www.dcloud.io/hbuilderx.html)。
+2. 下载[微信开发者工具](https://developers.weixin.qq.com/miniprogram/dev/devtools/stable.html)。
    
 ### 二、组件库
 | only for web    | 符合uni规范的全端组件 |
@@ -14,14 +14,20 @@
 
 ### 三、运行和调试
 #### 1. 调试微信小程序
-1. 微信开发者工具->工具栏选择设置->安全设置->打开服务端口开关
-2. HBuilderX->选中任意一个项目中的文件->工具栏选择运行->运行到小程序模拟器->微信开发者工具
+1. 微信开发者工具->工具栏选择设置->安全设置->打开服务端口开关。
+2. HBuilderX->选中任意一个项目中的文件->工具栏选择运行->运行到小程序模拟器->微信开发者工具。
 
 #### 2. 调试Android APP
 - Android真机调试
-1. 使用数据线连接Android设备->手机设置开发者选项->允许usb调试
-2. HBuilderX->选中任意一个项目中的文件->工具栏选择运行->运行到手机或模拟器->运行到Android App基座
+1. 使用数据线连接Android设备->手机设置开发者选项->允许usb调试。
+2. HBuilderX->选中任意一个项目中的文件->工具栏选择运行->运行到手机或模拟器->运行到Android App基座。
 
 - [Android模拟器]
 1. 下载[Android Studio](https://developer.android.google.cn/studio)，Device Manager安装Android 11版本模拟器（高版本可能会导致基座运行程序时一直卡在同步手机端程序文件）。
 2. HBuilderX->工具栏选择工具->设置->运行设置->配置adb路径，配置完成后重启HBuilderX，选中任意一个项目中的文件并运行到手机模拟器。
+
+### 四、发行
+#### 1. 上传微信小程序
+微信开发者工具->工具栏选择工具->上传->微信公众平台->版本管理->提交审核->通过审核后进行发布。
+#### 2. 打包Android APP
+HBuilderX->工具栏选择发行->原生APP云打包->使用云端证书进行传统打包。
